fixed overlapping items

--- a/src/app/pages/CartPage/style.module.css
+++ b/src/app/pages/CartPage/style.module.css
@@ -115,9 +115,6 @@ cart {
   color: #282828;
 }
 
-.imageContainer {
-  
-}
 
 .details {
   display: flex;
@@ -209,7 +206,7 @@ cart {
 /* right section */
 
 .rightSection {
-  background:#E5E5E54D;
+  background:#cac2df4d;
 
   width: 500px; /* Adjust width as needed */
   height: 90%; /* Adjust height to cover the entire height */
@@ -308,14 +305,13 @@ cart {
   padding: 16px 84px 16px 84px;
   border-radius: 4px 0px 0px 0px;
   background-color: #7C7B5D;
-  
   font-family: Montserrat;
   font-size: 20px;
   font-weight: 400;
   line-height: 24.38px;
   text-align: center; 
   margin-left: 50px;
-  margin-top: 50px;
+  margin-top: 305px;
 
 }
 
